2012-08-08	Artem A. Naumenko

	* core/DB/NoSQL/RedisNoSQL.class.php

	added campability with old version of redis servers

2012-07-20	Alexey S. Denisov

	* main/Utils/ClassUtils.class.php: fix for php 5.4 support

2012-07-11	Artem A. Naumenko

	* core/Cache/ListGenerator.class.php, core/DB/NoSQL/RedisNoSQL.class.php:
	redis nosql became lazy

2012-07-08	Alexey S. Denisov

	* main/Base/Hstore.class.php: hstore fix and tests update

2012-06-29	N. Konstantinov

	* core/DB/PgSQL.class.php
		test/core/DbConnectionTest.class.php:

	throw DatabaseException instead of BaseException in case of connection's failure

2012-06-04	Evgeny M. Stepanov

	* main/Base/Hstore.class.php: fix

2012-05-31	Alexey S. Denisov

	* main/DAOs/StorableDAO.class.php: fix merge object with self
		
2012-05-05	Artem A. Naumenko

	* core/DB/NoSQL/RedisNoSQL.class.php, 
	core/DB/NoSQL/RedisNoSQLList.class.php, core/Base/Listable.class.php,
	global.inc.php.tpl, test/main/RedisNoSQLTest.class.php:
	Added wrapper to phpredis https://github.com/nicolasff/phpredis with tests

2012-03-26	Alexey S. Denisov
	* core/Logic/BinaryExpression.class.php,
		core/Logic/PostfixUnaryExpression.class.php,
		core/Logic/PrefixUnaryExpression.class.php,
		core/OSQL/SQLFunction.class.php: Added option noBrackets for binary/unary expressions

2012-04-27	Georgiy T. Kutsurua

	* core/Form/Primitives/PrimitiveString.class.php:
		added method PrimitiveString::getAllowedPattern

2012-04-26	Artem A. Naumenko, Evgeny V. Kokovikhin

	* core/Base/Assert.class.php, core/Cache/PeclMemcached.class.php,
	main/Monitoring/PinbedPeclMemcached.class.php, test/main/Utils/PinbaTest.class.php,
	core/Cache/SequentialCache.class.php,
	test/core/SequentialCacheTest.class.php:
	Assert::isObject added, lazy ability to PeclMemcached, Pinba's tests tune,
	Addd SequentialCache with tests.

2012-04-22	Georgiy T. Kutsurua
	
	* core/OSQL/DBColumn.class.php: Fix DBColumn

2012-04-20	Timofey A. Anisimov

	* test/main/OsqlSelectTest.class.php,